actually finish hotpotato + initialize the list so it doesnt infinitely loop :P

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,3 +9,6 @@ commands:
   spoon:
     usage: spoon
     description: spoon
+  game:
+    usage: /<command> <start/end> [<hotpotato>]
+    description: Start the game, or end it.
